@@ -30,6 +30,7 @@
 	* CORE: Fixed problem with capitalization of entities in non-english locales.  ENGLISH now the default.
 	* CORE: Added support for the ENUM_TO_STRING type which persists Enum.toString() instead of name().  Thanks jiajia-li. 
 	* CORE: Added support for default byte[] value and string to byte[] conversion.  Thanks noordawod.
+	* CORE: Allow BigInteger to be an ID and version field by saving as string.  Thanks noordawod.
 	* JDBC: Possibly fixed some problems with the Oracle type with better boolean support.  Thanks to 51mon.
 	* JDBC: Added support for UUID database fields for Postgres and MSSQL.  Use dataType = UUID_NATIVE.  Thanks to tsharp.
 	* JDBC: Added support for a JdbcConnectionSource that uses an existing database connection.  Thanks to natinusala.
